add SurveyPage component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "colord": "^2.9.2",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
